--- a/basics/misc/Jenkinsfile
+++ b/basics/misc/Jenkinsfile
@@ -14,13 +14,13 @@ node {
      }
    }
    stage('docker build/push') {
-     docker.withRegistry('https://index.docker.io/v1/', 'steppedaxis') {
-       def app = docker.build("steppedaxis/docker-nodejs-demo:${commit_id}", '.').push()
+     docker.withRegistry('https://index.docker.io/v1/', 'nirrea839') {
+       def app = docker.build("nirrea839/docker-nodejs-demo:${commit_id}", '.').push()
      }
    }
    stage('docker run') {
      sh label: '', script: '''docker rm docker_test
-      docker run --rm -tid --name docker_test -p 3000 steppedaxis/docker-nodejs-demo:latest
+      docker run --rm -tid --name docker_test -p 3000 nirrea839/docker-nodejs-demo:latest
       docker kill docker_test
       
       '''
