--- a/basics/misc/Jenkinsfile
+++ b/basics/misc/Jenkinsfile
@@ -19,7 +19,7 @@ node {
      }
    }
    stage('docker run') {
-     sh label: '', script: '''docker rm docker_test
+     sh label: '', script: '''
       docker run --rm -tid --name docker_test -p 3000 nirrea839/docker-nodejs-demo:latest
       docker kill docker_test
       
